# This is a list of changes in pygame's history.
#
# CVS tag names are placed before the date
# BREAK = change breaks existing code
# BUG   = fixed a bug that was crashing

Jan 18, 2001
	cursor.read_xbm() renamed to cursor.load_xbm() [BREAK]

Jan 17, 2001
	documentation updated to include python modules too

Jan 16, 2001
	cursors module beefed up

Jan 15, 2001
	fix Surface.get_at() for 24bit surfaces
	endian cleanups for surfarray

Jan 8, 2001
	more warning cleanups
	music-finished callback fixed
	replaces SDL's parachute with smarter python version

Jan 6, 2001
	added pygame.version module

pygame-05
Jan 6, 2001
	Final cleanups for the new release

Jan 4, 2001
	Surface.blit() allows for rects as dest position
	surfarray cleanups and improvements

Dec 22, 2000
	timer threads properly shutdown

Dec 14, 2000
	display.set_mode pretending shorts are ints [BUG]

pygame-04
Dec 14, 2000
	music module had incorrect names for volume functions
	chimp example and full tutorial added

Dec 13, 2000
	display.update() is entirely better in many ways [BUG]

Dec 3, 2000
	fixed timing issues. negative time.delay() will become 0

Nov 30, 2000
	UserRect module added
	all objects now have a matching type; SurfaceType, etc

Nov 29, 2000
	joystick module rewrite finished [BREAK]
	cdrom module rewrite finished [BREAK]
	all constructors using capitalized function names [BREAK]
		(Rect, pygame.Surface, pygame.font.Font, etc)

Nov 28, 2000
	Surface.convert() better handles surface flags
	All color arguments (and returns) are RGBA format [BREAK]
	Removed Surface.map_rgba and unmap_rgba [BREAK]
	Added a default font, used by passing None as font file

pygame-03
Nov 20, 2000
	Added Surface.save() to create BMPs.

Nov 16, 2000
	Surface.set_clip() fixed when passing no args [BUG]

Nov 15, 2000
	time.set_timer() now handles multiple timers
	rect(), surface(), event() renamed to \
		new_rect, new_surface(), new_event() [BREAK]
	all new_XX() functions were added to pygame.locals